src/test/deca/codegen/valid/intermediaire2/arithmetiques/02while.deca
// Description:
//    Programme minimaliste réalisant des comparaisons dans des while entre une variable int et le résultat d'opérations arithmétiques.
//
// Resultats:
//    02while.expected
//    
//
// Historique:
//    cree le 08/06/2022

{
    int x = 0;
    int y = 3;
    
    while (x < 1 + 1) {
        println(x, " < 1 + 1");
        x = x + 1;
    }
    
    while (x > 1 - 1) {
        println(x, " > 1 - 1");
        x = x - 1;
    }

    while (x < 1 * 1) {
        println(x, " < 1 * 1");
        x = x + 1;
    }

    while (x > 1 / 2) {
        println(x, " > 1 / 2");
        x = x - 1;
    }

    while (x < y % 2) {
        println(x, " < ", y, " % 2");
        x = x + 1;
    }
}