src/test/deca/codegen/invalid/intermediaire2/arithmetiques/02overflowMul.deca
// Description:
//    Programme minimaliste testant le débordement de valeur lors d'une multiplication
//
// Resultats:
//    02overflowMul.expected
//
// Historique:
//    cree le 08/06/2022

{
    int x = 2147483647;
    x = x * 2;
}